# Obelisk

./: .gitignore  LICENSE  package.json  skills-lock.json
backend/: .env.local  README.md  biome.json  drizzle-dev.config.ts  package.json  prisma.config.ts  skills-lock.json  tsconfig.json
python-server/: .gitignore  E-classrecord_CITE_BSEMC.xlsx  E-classrecord_COL_ConstiLaw.xlsx  E-classrecord_COM_Anatomy.xlsx  E-classrecord_SYNTHETIC_12students.xlsx  INTEGRATION.md  README.md  pyproject.toml  test_ai_module.py  test_institutional_summary_e2e.py  test_upload_e2e.py
python-server/Obelisk-Python_Server-master/: README.md  TODOs.md  pyproject.toml
python-server/Obelisk-Python_Server-master/app/: __init__.py  main.py
python-server/Obelisk-Python_Server-master/app/api/routes/: __init__.py  health.py  upload.py
python-server/Obelisk-Python_Server-master/app/core/: config.py  exceptions.py  logging.py
python-server/Obelisk-Python_Server-master/app/etl/: __init__.py  abstracts.py
python-server/Obelisk-Python_Server-master/app/etl/extract/: __init__.py  extractor.py
python-server/Obelisk-Python_Server-master/app/etl/load/: loader.py
python-server/Obelisk-Python_Server-master/app/etl/transform/: __init__.py
python-server/Obelisk-Python_Server-master/app/models/: __init__.py  base.py  job.py
python-server/Obelisk-Python_Server-master/app/services/: __init__.py  job_queue.py  upload_service.py
python-server/Obelisk-Python_Server-master/app/utils/: __init__.py
python-server/Obelisk-Python_Server-master/app/workers/: __init__.py  worker.py
(+80 files in other folders)
